<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MetroMate</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="depart_time">Departure Time:</string>

    <string name="welcome_text">Welcome to MetroMate</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second863._fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_driver_registration">DriverRegistration</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="driver_badge_id">Driver Badge ID</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_brith">Date of Brith</string>
    <string name="password">Password</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="_1999_05_11">1999/05/11</string>
    <string name="stars">********</string>
    <string name="enter_driver_badge_id">Enter driver badge ID</string>
    <string name="enter_email_address">Enter email address @</string>
    <string name="password_minimum_of_8_characters">Password (minimum of 8 characters)</string>
    <string name="metromate_logo">metromate logo</string>
    <string name="button_commuter">Commuter</string>
    <string name="button_driver">Bus Driver</string>
    <string name="i_am" tools:ignore="TypographyEllipsis">I am a...</string>
    <string name="slogan">Your Perfect Mate for Hassle-Free Commutes</string>
    <string name="myTrip">My Trip</string>
    <string name="depart">Departure Bus Stop</string>
    <string name="arrival">Arrival Bus Stop</string>

    <string-array name="dropdown_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <!-- Add more items as needed -->
    </string-array>

    <string name="report_first_name">First Name</string>
    <string name="report_last_name">Last Name</string>
    <string name="email_name">Email</string>
    <string name="eamil_ep_name">example@gamail.com</string>
    <string name="trip_dets">Trip details</string>
    <string name="bus_num_head">Bus Number</string>
    <string name="bus_num">12</string>
    <string name="driverName_head">Driver Name</string>
    <string name="driverName_input">John Doe</string>
    <string name="dateHead">Date of Trip</string>
    <string name="date_input">2023/04/09</string>
    <string name="issueHead">Describe issue</string>
    <string name="issue_input">Insert Text</string>
    <string name="reportHead">Report Trip</string>
    <string name="report">REPORT</string>
    <string name="name">Name</string>


    <string name="tag_header">myTag</string>
    <string name="tag_balance">Balance:</string>
    <string name="trips_left">Trips remaining:</string>
    <string name="tag_type">Tag Type</string>
    <string name="tag_zone">Zone</string>
    <string name="tag_number">Tag number</string>
    <string name="btn_reload">Reload Tag</string>
    <string name="btn_cancel">Cancel Tag</string>

    <string name="cancelheader">Cancel myTag</string>



    <string name="commuterEmail">Email</string>
    <string name="eventType">Event Type</string>
    <string name="estimatedDelay">Estimated delay</string>
    <string name="area_key_label">Area key label</string>
    <string name="e">E=</string>
    <string name="a">A=</string>
    <string name="area_key_label2">Area key label</string>
    <string name="b">B=</string>
    <string name="area_key_label3">Area key label</string>
    <string name="c">C=</string>
    <string name="area_key_label4">Area key label</string>
    <string name="d">D=</string>
    <string name="area_key_label5">Area key label</string>
    <string name="f">F=</string>
    <string name="area_key_label6">Area key label</string>
    <string name="from_oakdene">From Oakdene</string>
    <string name="from_bassonia">From Bassonia</string>
    <string name="from_the_glen_centre">From The Glen Centre</string>
    <string name="_08_00am_a">08:00am A</string>
    <string name="_09_00am">09:00am</string>
    <string name="_09_40_am">09:40 am</string>
    <string name="spinner_prompt">Select an area schedule:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_map_api_key">AIzaSyBG1Bdri7sh_Zin07TWCjnR1_sGvEYYXjI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Schedules</string>
    <string name="title_maps">Maps and Routes</string>
    <string name="title_mytag">myTag</string>
    <string name="_08_00">08:00</string>
    <string name="scheduleSelect">schedule_Select</string>
    <string name="bus_background">bus_Background</string>
    <string name="driverHomeRoute">Route</string>

</resources>