<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bus_mobile_navigation"
    app:startDestination="@+id/navigation_bus_home">

    <fragment
        android:id="@+id/navigation_bus_home"
        android:name="com.example.metromate01.ui.bushome.BusHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_bus_home" />

    <fragment
        android:id="@+id/navigation_bus_schedules"
        android:name="com.example.metromate01.ui.busschedules.BusSchedulesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_bus_schedules" />

    <fragment
        android:id="@+id/navigation_bus_maps"
        android:name="com.example.metromate01.ui.busmaps.BusMapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_bus_maps" />

</navigation>