<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.metromate01.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.metromate01.ui.schedules.SchedulesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_activity_schedule_page" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.metromate01.ui.maps.MapsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_mytag"
        android:name="com.example.metromate01.ui.mytag.MyTagFragment"
        android:label="@string/title_mytag"
        tools:layout="@layout/fragment_my_tag2" />
</navigation>