<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".ui.mytag.MyTagFragment">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="249dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toTopOf="@+id/text_mytag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        app:srcCompat="@drawable/logo_light_cropped" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="352dp"
        android:layout_height="304dp"
        android:src="@drawable/bus_tag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/text_mytag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/tag_header"
        android:text="myTag"
        android:textAlignment="center"
        android:textColor="#E35C32"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="273dp"
        android:layout_height="88dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/balance_background"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="text"
        android:text=". "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <Button
        android:id="@+id/button5"
        android:layout_width="142dp"
        android:layout_height="55dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/dark_blue"
        android:hint="@string/btn_reload"
        android:text="Reload Tag"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/maroon"
        android:text="Cancel Tag"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginEnd="92dp"
        android:hint="@string/tag_type"
        android:text="Tag Type"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.789" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="78dp"
        android:layout_height="26dp"

        android:layout_marginEnd="100dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/tag_zone"
        android:lineSpacingExtra="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="98dp"
        android:layout_height="27dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="44dp"
        android:hint="@string/tag_number"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="@+id/imageView10" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/trips_left"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextMultiLine2"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine2" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="156dp"
        android:hint="@string/tag_balance"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextMultiLine2"
        app:layout_constraintVertical_bias="0.166" />

</androidx.constraintlayout.widget.ConstraintLayout>